k8s/assinaturas/assinaturas.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription
spec:
  selector:
    matchLabels:
      app: subscription
  template:
    metadata:
      labels:
        app: subscription
    spec:
      containers:
        - name: subscription
          image: wesleywillians/maratonafc3-subscription
          ports:
            - containerPort: 3000
          volumeMounts:
          - name: subscription-conf
            subPath: .env
            mountPath: /bin/.env

      volumes:
      - name: subscription-conf
        configMap:
          name: subscription-conf
          items:
            - key: env
              path: .env
          

---

apiVersion: v1
kind: Service
metadata:
  name: subscription-service
  labels:
    app: subscription
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http-svc
      port: 3000
  selector:
    app: subscription
    

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: subscription-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:  
    - "loja.maratona.fullcycle.com.br"

---
  
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: subscription-vs
spec:
  hosts:
  - "loja.maratona.fullcycle.com.br"
  gateways:
  - subscription-gateway
  http:
    - name: "subscription"
      match:
      - uri:
          prefix: /
        port: 80
      route:
      - destination:
          port:
            number: 3000
          host: subscription-service
